_sass/_style.scss
* {
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

html {
  font-size: 62.5%;
}

body {
  font: 300 14px/1.4 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #444;
  background-color: #fdfdfd;
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: "kern" 1;
  -moz-font-feature-settings: "kern" 1;
  -o-font-feature-settings: "kern" 1;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
}

::selection {
  background: #F9AF48;
  color: #FFF;
  text-shadow: none;
}

hr {
  border: 0;
  margin: 60px 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(238, 238, 238, 0), rgba(238, 238, 238, 1), rgba(238, 238, 238, 0));
}

article.post {
  display: block;
  max-width: 800px;
  margin: 0 auto 0 auto;
}

article h1 {
  color: #F9AF48;
  font-size: 2.6em;
  font-weight: bold;
}

article h2 {
  color: #F9AF48;
  font-size: 1.8em;
  // font-weight: bold;
}

article p {
  font-size: 1.6em;
  margin: 1em 0;
}

/* stick-footer */
html {
  position: relative;
  min-height: 100%;
}
body {
  margin: 83px 0 64px 0; /* bottom = footer height */
}
body > footer {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 24px;
  width: 100%;
}
/* /sticky-footer */

a, a:visited {
  color: #F9AF48;
}

a:hover {
  color: #F9AF48;
}

.button {
  color: #F9AF48;
  border: 1px solid #F9AF48;
  background: transparent;
  border-radius: 3px;
  cursor: pointer;
  font-size: 1em;
  padding: 5px 10px;
  font-weight: 300;
  text-decoration: none;
  transition: all .3s ease;

  &:hover {
    background: #F9AF48;
    color: white;
    text-decoration: none;
  }
}

a:hover button {
  text-decoration: none !important;
}

body > header {
  display: block;
  background: white;
  border-bottom: 1px solid #EEEEEE;
  padding: 20px 0;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 1;

  h1 {
    display: inline;
    font-weight: bold;
    font-size: 2em;
    margin: 0.67em 0;

    a {
      color: #444 !important;
      &:hover {
        text-decoration: none;
      }

      img {
        width: 26px;
        position: relative;
        top: -4px;
      }
    }
  }

  nav {
    display: block;
    float: right;
    position: relative;
    top: 10px;

    ul {
      display: block;
      float:right;
      margin: 0;
      padding: 0;
      list-style: none;

      li {
        display: block;
        float: left;
        margin: 0 0 0 20px;
        padding: 0;

        a {
          color: #F9AF48;
          font-size: 1.2em;
        }
      }
    }
  }
}

body > main {
  display: block;
  padding: 20px 0;
}

body > footer {
  display: block;
  background: #F7F8FA;
  padding: 20px 0;

  .copy {
    color: #ccc;
  }

  a {
    float: right;
  }
}

.container {
  display: block;
  margin: 0 auto;
  padding: 0 60px;
  max-width: 960px;
}

